everything ok... only in Scoreboard activty Kick & Defender should display seperately in bottom...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,81 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">748732621895679</string>
+
+
+    <string name="select_prompt">Select the charity</string>
+    <string name="select_prompt1">Select the amount</string>
+
+    <string-array name="charity">
+        <item>Select</item>
+        <item>Savethechildren</item>
+        <item>Catholic</item>
+        <item>clean my city</item>
+        <item>art of giving</item>
+    </string-array>
+
+    <string-array name="amount">
+        <item>.05</item>
+        <item>.10</item>
+        <item>.50</item>
+        <item>1</item>
+    </string-array>
+    <string name="prompt2">MM</string>
+
+
+    <string-array name="months">
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
+
+
+    <string name="prompt3">YYYY</string>
+    <string-array name="year">
+        <item>2016</item>
+        <item>2017</item>
+        <item>2018</item>
+        <item>2019</item>
+        <item>2020</item>
+        <item>2021</item>
+        <item>2022</item>
+        <item>2023</item>
+        <item>2024</item>
+        <item>2025</item>
+        <item>2026</item>
+        <item>2027</item>
+        <item>2028</item>
+        <item>2029</item>
+        <item>2030</item>
+        <item>2031</item>
+        <item>2032</item>
+        <item>2033</item>
+        <item>2034</item>
+        <item>2035</item>
+        <item>2036</item>
+        <item>2037</item>
+        <item>2038</item>
+        <item>2040</item>
+        <item>2041</item>
+        <item>2042</item>
+        <item>2043</item>
+        <item>2044</item>
+        <item>2045</item>
+        <item>2046</item>
+        <item>2047</item>
+        <item>2048</item>
+        <item>2049</item>
+        <item>2050</item>
+        <item>2051</item>
+    </string-array>
+
 </resources>
